// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Buttons
    options={
      Object {
        "facebook": Object {
          "className1": "btn-floating btn-fb btn-lg",
          "className2": "fa fa-facebook",
        },
        "google": Object {
          "className1": "btn-floating btn-gplus btn-lg",
          "className2": "fa fa-google-plus",
        },
        "twitter": Object {
          "className1": "btn-floating btn-tw btn-lg",
          "className2": "fa fa-twitter",
        },
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <div>
          <div
            className="form-check"
          >
            <label
              className="btn btn-outline-info"
            >
              Remember me
            </label>
            <a
              className="btn btn-outline-info"
              href=""
            >
              Forgot password?
            </a>
          </div>
        </div>,
        <nav
          className="blog-pagination"
        >
          <button
            className="btn btn-outline-info btn-rounded my-2 waves-effect z-depth-0"
            type="submit"
          >
            Sign in
          </button>
        </nav>,
        <p>
          Not a member?
          <a
            href=""
          >
            Register
          </a>
        </p>,
        Array [
          undefined,
          undefined,
          undefined,
        ],
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="form-check"
          >
            <label
              className="btn btn-outline-info"
            >
              Remember me
            </label>
            <a
              className="btn btn-outline-info"
              href=""
            >
              Forgot password?
            </a>
          </div>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <label
                className="btn btn-outline-info"
              >
                Remember me
              </label>,
              <a
                className="btn btn-outline-info"
                href=""
              >
                Forgot password?
              </a>,
            ],
            "className": "form-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Remember me",
                "className": "btn btn-outline-info",
              },
              "ref": null,
              "rendered": "Remember me",
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Forgot password?",
                "className": "btn btn-outline-info",
                "href": "",
              },
              "ref": null,
              "rendered": "Forgot password?",
              "type": "a",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn btn-outline-info btn-rounded my-2 waves-effect z-depth-0"
            type="submit"
          >
            Sign in
          </button>,
          "className": "blog-pagination",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Sign in",
            "className": "btn btn-outline-info btn-rounded my-2 waves-effect z-depth-0",
            "type": "submit",
          },
          "ref": null,
          "rendered": "Sign in",
          "type": "button",
        },
        "type": "nav",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Not a member?",
            <a
              href=""
            >
              Register
            </a>,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Not a member?",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Register",
              "href": "",
            },
            "ref": null,
            "rendered": "Register",
            "type": "a",
          },
        ],
        "type": "p",
      },
      undefined,
      undefined,
      undefined,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div>
            <div
              className="form-check"
            >
              <label
                className="btn btn-outline-info"
              >
                Remember me
              </label>
              <a
                className="btn btn-outline-info"
                href=""
              >
                Forgot password?
              </a>
            </div>
          </div>,
          <nav
            className="blog-pagination"
          >
            <button
              className="btn btn-outline-info btn-rounded my-2 waves-effect z-depth-0"
              type="submit"
            >
              Sign in
            </button>
          </nav>,
          <p>
            Not a member?
            <a
              href=""
            >
              Register
            </a>
          </p>,
          Array [
            undefined,
            undefined,
            undefined,
          ],
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="form-check"
            >
              <label
                className="btn btn-outline-info"
              >
                Remember me
              </label>
              <a
                className="btn btn-outline-info"
                href=""
              >
                Forgot password?
              </a>
            </div>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <label
                  className="btn btn-outline-info"
                >
                  Remember me
                </label>,
                <a
                  className="btn btn-outline-info"
                  href=""
                >
                  Forgot password?
                </a>,
              ],
              "className": "form-check",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Remember me",
                  "className": "btn btn-outline-info",
                },
                "ref": null,
                "rendered": "Remember me",
                "type": "label",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Forgot password?",
                  "className": "btn btn-outline-info",
                  "href": "",
                },
                "ref": null,
                "rendered": "Forgot password?",
                "type": "a",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn-outline-info btn-rounded my-2 waves-effect z-depth-0"
              type="submit"
            >
              Sign in
            </button>,
            "className": "blog-pagination",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign in",
              "className": "btn btn-outline-info btn-rounded my-2 waves-effect z-depth-0",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Sign in",
            "type": "button",
          },
          "type": "nav",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Not a member?",
              <a
                href=""
              >
                Register
              </a>,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Not a member?",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Register",
                "href": "",
              },
              "ref": null,
              "rendered": "Register",
              "type": "a",
            },
          ],
          "type": "p",
        },
        undefined,
        undefined,
        undefined,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Forms /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Form
    auth={
      Object {
        "errors": "User with this name or password not found !",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="col-md-6 mb-3 offset-md-3"
      >
        <div
          className="text-center mb-4 wow fadeIn"
        >
          <div
            className="card"
          >
            <h5
              className="card-header black white-text text-center mt-0 py-4"
            >
              <strong>
                Sign in
              </strong>
            </h5>
            <div
              className="card-body px-lg-5 pt-5"
            >
              <form
                className="text-center"
                id="loginForm"
              >
                <div>
                  <span
                    id="sp"
                    style={
                      Object {
                        "color": "red",
                        "display": "block",
                      }
                    }
                  >
                     
                    User with this name or password not found !
                  </span>
                </div>
                <Input
                  id="materialLoginFormEmail"
                  innerHtml="Email"
                  type="email"
                />
                <Input
                  id="materialLoginFormPassword"
                  innerHtml="Password"
                  type="password"
                />
                <div
                  className="d-flex justify-content-around"
                />
                <Buttons />
              </form>
            </div>
          </div>
        </div>
      </div>,
      "className": "row",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="text-center mb-4 wow fadeIn"
        >
          <div
            className="card"
          >
            <h5
              className="card-header black white-text text-center mt-0 py-4"
            >
              <strong>
                Sign in
              </strong>
            </h5>
            <div
              className="card-body px-lg-5 pt-5"
            >
              <form
                className="text-center"
                id="loginForm"
              >
                <div>
                  <span
                    id="sp"
                    style={
                      Object {
                        "color": "red",
                        "display": "block",
                      }
                    }
                  >
                     
                    User with this name or password not found !
                  </span>
                </div>
                <Input
                  id="materialLoginFormEmail"
                  innerHtml="Email"
                  type="email"
                />
                <Input
                  id="materialLoginFormPassword"
                  innerHtml="Password"
                  type="password"
                />
                <div
                  className="d-flex justify-content-around"
                />
                <Buttons />
              </form>
            </div>
          </div>
        </div>,
        "className": "col-md-6 mb-3 offset-md-3",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="card"
          >
            <h5
              className="card-header black white-text text-center mt-0 py-4"
            >
              <strong>
                Sign in
              </strong>
            </h5>
            <div
              className="card-body px-lg-5 pt-5"
            >
              <form
                className="text-center"
                id="loginForm"
              >
                <div>
                  <span
                    id="sp"
                    style={
                      Object {
                        "color": "red",
                        "display": "block",
                      }
                    }
                  >
                     
                    User with this name or password not found !
                  </span>
                </div>
                <Input
                  id="materialLoginFormEmail"
                  innerHtml="Email"
                  type="email"
                />
                <Input
                  id="materialLoginFormPassword"
                  innerHtml="Password"
                  type="password"
                />
                <div
                  className="d-flex justify-content-around"
                />
                <Buttons />
              </form>
            </div>
          </div>,
          "className": "text-center mb-4 wow fadeIn",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h5
                className="card-header black white-text text-center mt-0 py-4"
              >
                <strong>
                  Sign in
                </strong>
              </h5>,
              <div
                className="card-body px-lg-5 pt-5"
              >
                <form
                  className="text-center"
                  id="loginForm"
                >
                  <div>
                    <span
                      id="sp"
                      style={
                        Object {
                          "color": "red",
                          "display": "block",
                        }
                      }
                    >
                       
                      User with this name or password not found !
                    </span>
                  </div>
                  <Input
                    id="materialLoginFormEmail"
                    innerHtml="Email"
                    type="email"
                  />
                  <Input
                    id="materialLoginFormPassword"
                    innerHtml="Password"
                    type="password"
                  />
                  <div
                    className="d-flex justify-content-around"
                  />
                  <Buttons />
                </form>
              </div>,
            ],
            "className": "card",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <strong>
                  Sign in
                </strong>,
                "className": "card-header black white-text text-center mt-0 py-4",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Sign in",
                },
                "ref": null,
                "rendered": "Sign in",
                "type": "strong",
              },
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <form
                  className="text-center"
                  id="loginForm"
                >
                  <div>
                    <span
                      id="sp"
                      style={
                        Object {
                          "color": "red",
                          "display": "block",
                        }
                      }
                    >
                       
                      User with this name or password not found !
                    </span>
                  </div>
                  <Input
                    id="materialLoginFormEmail"
                    innerHtml="Email"
                    type="email"
                  />
                  <Input
                    id="materialLoginFormPassword"
                    innerHtml="Password"
                    type="password"
                  />
                  <div
                    className="d-flex justify-content-around"
                  />
                  <Buttons />
                </form>,
                "className": "card-body px-lg-5 pt-5",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div>
                      <span
                        id="sp"
                        style={
                          Object {
                            "color": "red",
                            "display": "block",
                          }
                        }
                      >
                         
                        User with this name or password not found !
                      </span>
                    </div>,
                    <Input
                      id="materialLoginFormEmail"
                      innerHtml="Email"
                      type="email"
                    />,
                    <Input
                      id="materialLoginFormPassword"
                      innerHtml="Password"
                      type="password"
                    />,
                    <div
                      className="d-flex justify-content-around"
                    />,
                    <Buttons />,
                  ],
                  "className": "text-center",
                  "id": "loginForm",
                  "onSubmit": undefined,
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <span
                        id="sp"
                        style={
                          Object {
                            "color": "red",
                            "display": "block",
                          }
                        }
                      >
                         
                        User with this name or password not found !
                      </span>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          " ",
                          "User with this name or password not found !",
                        ],
                        "id": "sp",
                        "style": Object {
                          "color": "red",
                          "display": "block",
                        },
                      },
                      "ref": null,
                      "rendered": Array [
                        " ",
                        "User with this name or password not found !",
                      ],
                      "type": "span",
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "id": "materialLoginFormEmail",
                      "innerHtml": "Email",
                      "onChange": undefined,
                      "type": "email",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "id": "materialLoginFormPassword",
                      "innerHtml": "Password",
                      "onChange": undefined,
                      "type": "password",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "d-flex justify-content-around",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "options": undefined,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "form",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="col-md-6 mb-3 offset-md-3"
        >
          <div
            className="text-center mb-4 wow fadeIn"
          >
            <div
              className="card"
            >
              <h5
                className="card-header black white-text text-center mt-0 py-4"
              >
                <strong>
                  Sign in
                </strong>
              </h5>
              <div
                className="card-body px-lg-5 pt-5"
              >
                <form
                  className="text-center"
                  id="loginForm"
                >
                  <div>
                    <span
                      id="sp"
                      style={
                        Object {
                          "color": "red",
                          "display": "block",
                        }
                      }
                    >
                       
                      User with this name or password not found !
                    </span>
                  </div>
                  <Input
                    id="materialLoginFormEmail"
                    innerHtml="Email"
                    type="email"
                  />
                  <Input
                    id="materialLoginFormPassword"
                    innerHtml="Password"
                    type="password"
                  />
                  <div
                    className="d-flex justify-content-around"
                  />
                  <Buttons />
                </form>
              </div>
            </div>
          </div>
        </div>,
        "className": "row",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="text-center mb-4 wow fadeIn"
          >
            <div
              className="card"
            >
              <h5
                className="card-header black white-text text-center mt-0 py-4"
              >
                <strong>
                  Sign in
                </strong>
              </h5>
              <div
                className="card-body px-lg-5 pt-5"
              >
                <form
                  className="text-center"
                  id="loginForm"
                >
                  <div>
                    <span
                      id="sp"
                      style={
                        Object {
                          "color": "red",
                          "display": "block",
                        }
                      }
                    >
                       
                      User with this name or password not found !
                    </span>
                  </div>
                  <Input
                    id="materialLoginFormEmail"
                    innerHtml="Email"
                    type="email"
                  />
                  <Input
                    id="materialLoginFormPassword"
                    innerHtml="Password"
                    type="password"
                  />
                  <div
                    className="d-flex justify-content-around"
                  />
                  <Buttons />
                </form>
              </div>
            </div>
          </div>,
          "className": "col-md-6 mb-3 offset-md-3",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="card"
            >
              <h5
                className="card-header black white-text text-center mt-0 py-4"
              >
                <strong>
                  Sign in
                </strong>
              </h5>
              <div
                className="card-body px-lg-5 pt-5"
              >
                <form
                  className="text-center"
                  id="loginForm"
                >
                  <div>
                    <span
                      id="sp"
                      style={
                        Object {
                          "color": "red",
                          "display": "block",
                        }
                      }
                    >
                       
                      User with this name or password not found !
                    </span>
                  </div>
                  <Input
                    id="materialLoginFormEmail"
                    innerHtml="Email"
                    type="email"
                  />
                  <Input
                    id="materialLoginFormPassword"
                    innerHtml="Password"
                    type="password"
                  />
                  <div
                    className="d-flex justify-content-around"
                  />
                  <Buttons />
                </form>
              </div>
            </div>,
            "className": "text-center mb-4 wow fadeIn",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h5
                  className="card-header black white-text text-center mt-0 py-4"
                >
                  <strong>
                    Sign in
                  </strong>
                </h5>,
                <div
                  className="card-body px-lg-5 pt-5"
                >
                  <form
                    className="text-center"
                    id="loginForm"
                  >
                    <div>
                      <span
                        id="sp"
                        style={
                          Object {
                            "color": "red",
                            "display": "block",
                          }
                        }
                      >
                         
                        User with this name or password not found !
                      </span>
                    </div>
                    <Input
                      id="materialLoginFormEmail"
                      innerHtml="Email"
                      type="email"
                    />
                    <Input
                      id="materialLoginFormPassword"
                      innerHtml="Password"
                      type="password"
                    />
                    <div
                      className="d-flex justify-content-around"
                    />
                    <Buttons />
                  </form>
                </div>,
              ],
              "className": "card",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <strong>
                    Sign in
                  </strong>,
                  "className": "card-header black white-text text-center mt-0 py-4",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Sign in",
                  },
                  "ref": null,
                  "rendered": "Sign in",
                  "type": "strong",
                },
                "type": "h5",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <form
                    className="text-center"
                    id="loginForm"
                  >
                    <div>
                      <span
                        id="sp"
                        style={
                          Object {
                            "color": "red",
                            "display": "block",
                          }
                        }
                      >
                         
                        User with this name or password not found !
                      </span>
                    </div>
                    <Input
                      id="materialLoginFormEmail"
                      innerHtml="Email"
                      type="email"
                    />
                    <Input
                      id="materialLoginFormPassword"
                      innerHtml="Password"
                      type="password"
                    />
                    <div
                      className="d-flex justify-content-around"
                    />
                    <Buttons />
                  </form>,
                  "className": "card-body px-lg-5 pt-5",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div>
                        <span
                          id="sp"
                          style={
                            Object {
                              "color": "red",
                              "display": "block",
                            }
                          }
                        >
                           
                          User with this name or password not found !
                        </span>
                      </div>,
                      <Input
                        id="materialLoginFormEmail"
                        innerHtml="Email"
                        type="email"
                      />,
                      <Input
                        id="materialLoginFormPassword"
                        innerHtml="Password"
                        type="password"
                      />,
                      <div
                        className="d-flex justify-content-around"
                      />,
                      <Buttons />,
                    ],
                    "className": "text-center",
                    "id": "loginForm",
                    "onSubmit": undefined,
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <span
                          id="sp"
                          style={
                            Object {
                              "color": "red",
                              "display": "block",
                            }
                          }
                        >
                           
                          User with this name or password not found !
                        </span>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            " ",
                            "User with this name or password not found !",
                          ],
                          "id": "sp",
                          "style": Object {
                            "color": "red",
                            "display": "block",
                          },
                        },
                        "ref": null,
                        "rendered": Array [
                          " ",
                          "User with this name or password not found !",
                        ],
                        "type": "span",
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "id": "materialLoginFormEmail",
                        "innerHtml": "Email",
                        "onChange": undefined,
                        "type": "email",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "id": "materialLoginFormPassword",
                        "innerHtml": "Password",
                        "onChange": undefined,
                        "type": "password",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "d-flex justify-content-around",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "options": undefined,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "form",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Header /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <NavLink
          activeClassName="active"
          aria-current="page"
          className="navbar-brand"
          to="/"
        >
          Home
        </NavLink>,
        <div
          className="collapse navbar-collapse"
          id="navbarNavAltMarkup"
        >
          <div
            className="navbar-nav"
          >
            <NavLink
              activeClassName="active"
              aria-current="page"
              className="navbar-brand"
              to="/login"
            >
              Login
            </NavLink>
          </div>
        </div>,
      ],
      "className": "navbar navbar-expand-lg navbar-light",
      "style": Object {
        "backgroundColor": "#e3f2fd",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "activeClassName": "active",
          "aria-current": "page",
          "children": "Home",
          "className": "navbar-brand",
          "to": "/",
        },
        "ref": null,
        "rendered": "Home",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="navbar-nav"
          >
            <NavLink
              activeClassName="active"
              aria-current="page"
              className="navbar-brand"
              to="/login"
            >
              Login
            </NavLink>
          </div>,
          "className": "collapse navbar-collapse",
          "id": "navbarNavAltMarkup",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <NavLink
              activeClassName="active"
              aria-current="page"
              className="navbar-brand"
              to="/login"
            >
              Login
            </NavLink>,
            "className": "navbar-nav",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeClassName": "active",
              "aria-current": "page",
              "children": "Login",
              "className": "navbar-brand",
              "to": "/login",
            },
            "ref": null,
            "rendered": "Login",
            "type": [Function],
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <NavLink
            activeClassName="active"
            aria-current="page"
            className="navbar-brand"
            to="/"
          >
            Home
          </NavLink>,
          <div
            className="collapse navbar-collapse"
            id="navbarNavAltMarkup"
          >
            <div
              className="navbar-nav"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="navbar-brand"
                to="/login"
              >
                Login
              </NavLink>
            </div>
          </div>,
        ],
        "className": "navbar navbar-expand-lg navbar-light",
        "style": Object {
          "backgroundColor": "#e3f2fd",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeClassName": "active",
            "aria-current": "page",
            "children": "Home",
            "className": "navbar-brand",
            "to": "/",
          },
          "ref": null,
          "rendered": "Home",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="navbar-nav"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                className="navbar-brand"
                to="/login"
              >
                Login
              </NavLink>
            </div>,
            "className": "collapse navbar-collapse",
            "id": "navbarNavAltMarkup",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                aria-current="page"
                className="navbar-brand"
                to="/login"
              >
                Login
              </NavLink>,
              "className": "navbar-nav",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "aria-current": "page",
                "children": "Login",
                "className": "navbar-brand",
                "to": "/login",
              },
              "ref": null,
              "rendered": "Login",
              "type": [Function],
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Home /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Home />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h3>
        Author's Haven
      </h3>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Author's Haven",
      },
      "ref": null,
      "rendered": "Author's Haven",
      "type": "h3",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h3>
          Author's Haven
        </h3>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Author's Haven",
        },
        "ref": null,
        "rendered": "Author's Haven",
        "type": "h3",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Inputs /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Input
    required={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="md-form"
      >
        <input
          className="form-control"
        />
        <label />
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <input
            className="form-control"
          />,
          <label />,
        ],
        "className": "md-form",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control",
            "id": undefined,
            "onChange": undefined,
            "type": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "htmlFor": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "label",
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="md-form"
        >
          <input
            className="form-control"
          />
          <label />
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="form-control"
            />,
            <label />,
          ],
          "className": "md-form",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-control",
              "id": undefined,
              "onChange": undefined,
              "type": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "htmlFor": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "label",
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<Login /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Connect(Login) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": null,
        "_currentValue2": null,
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": null,
          "_currentValue2": null,
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<SocialAuthButton /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SocialAuthButtons />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <a>
        <i />
      </a>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <i />,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
      "type": "a",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <a>
          <i />
        </a>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <i />,
          "className": undefined,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
        "type": "a",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
